// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app actions appError creates APP_ERROR action 1`] = `
Object {
  "error": true,
  "payload": [Error: foo],
  "type": "APP_ERROR",
}
`;

exports[`app actions appInfo creates APP_INFO action 1`] = `
Object {
  "payload": "info",
  "type": "APP_INFO",
}
`;

exports[`app actions appOnline creates APP_ONLINE action 1`] = `
Object {
  "payload": Object {
    "online": true,
  },
  "type": "APP_ONLINE",
}
`;

exports[`app actions appStarted creates APP_STARTED action 1`] = `
Object {
  "type": "APP_STARTED",
}
`;

exports[`app actions appSuccess creates APP_SUCCESS action 1`] = `
Object {
  "payload": "success!",
  "type": "APP_SUCCESS",
}
`;

exports[`app actions onAuth creates ON_AUTH action 1`] = `
Object {
  "payload": Object {
    "token": "TOKEN",
    "user": Object {
      "email": "foo@example.com",
    },
  },
  "type": "ON_AUTH",
}
`;

exports[`app actions resetSettings creates RESET_SETTINGS action 1`] = `
Object {
  "type": "RESET_SETTINGS",
}
`;
